objects/Sales_Region_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Region Assignments</relationshipLabel>
        <relationshipName>Sales_Region_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Subdivision__c</fullName>
        <formula>Sales_Region__r.Name + &apos;-&apos; + TEXT(Sales_Region__r.SubDivision__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region-Subdivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>Sales_Region__c</referenceTo>
        <relationshipLabel>Sales Region Assignments</relationshipLabel>
        <relationshipName>Sales_Region_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Region Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Region Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Region Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>